# yet-another-anime-game-launcher

./: .eslintignore  .eslintrc  .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  build-app.js  build-sophon.sh  configure.sh  eslint.config.js  fr_FR.ts  index.html  neutralino.config.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-ontag.yaml  build.yaml  ci-pr.yaml
neutralinojs/: neutralino-mac_x64
sidecar/7z/: License.txt
sidecar/aria2/: LICENSE.txt  aria2c
sidecar/hpatchz/: LICENSE.txt  hpatchz
sidecar/uv/: uvx
sidecar/xdelta/: xdelta3
sophon_server/: .gitignore  .python-version  build-sophon.sh  manifest.proto  manifest_ldiff.proto  models.py  progress_handlers.py  pyproject.toml  server.py  sophon_api.py  tasks.py  utils.py
src/: accidental-complexity.ts  app.css  app.tsx  aria2.ts  channel-client.ts  command-builder.spec.ts  command-builder.ts  common-update-ui.tsx  config.ts  config.tsx  crossover.ts  downloadable-resource.ts  errors.ts  github.ts  hosts.ts  index.tsx  launcher.tsx  media-cache.ts  neutralinojs.d.ts  patch.ts  reshade.ts  sophon.ts  updater.ts  wine.tsx
src/clients/: bh3glb.ts  cbjq.ts  cbjqcn.ts  hk4ecn.ts  hk4eos.ts  hk4euniversal.ts  hkrpgcn.ts  hkrpgos.ts  index.ts  napcn.ts  napos.ts  registry.ts  secret.b64  shared.d.ts  universal.ts
src/components/: drive-status.tsx  speed-indicators.tsx  ui.tsx
src/config/: config-def.ts  disable-log.tsx  disable-update-notices.tsx  dpi.tsx  (+14 more)
(+137 files in other folders)
