[project]
name = "sophon-server"
version = "0.1.0"
description = "Game file download server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "nuitka>=2.7.16",
    "protobuf>=6.31.1",
    "psutil>=7.0.0",
    "pycurl>=7.45.6",
    "websockets>=15.0.1",
    "zstandard>=0.23.0",
]
