[project]
name = "sophon-server"
version = "0.1.0"
description = "Game file download server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "msgspec>=0.19.0",
    "protobuf>=6.33.5",
    "psutil>=7.2.2",
    "pycurl>=7.45.4",
    "pyinstaller>=6.15.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
    "zstandard>=0.25.0",
]
